--- a/TestingNinjectDependencyInjection/packages.config
+++ b/TestingNinjectDependencyInjection/packages.config
@@ -1,6 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40-Client" />
-  <package id="Ninject" version="3.2.0.0" targetFramework="net40-Client" />
-  <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net40-Client" />
+  <package id="Ninject" version="3.2.0.0" targetFramework="net40" />
 </packages>
